--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,16 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.13.0</version> <!-- Supports JDK 21 -->
+				<configuration>
+					<source>21</source> <!-- Set source compatibility to JDK 21 -->
+					<target>21</target> <!-- Set target compatibility to JDK 21 -->
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
