--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>extentreports</artifactId>
 			<version>2.40.2</version>
 		</dependency>
+	  <dependency>
+		  <groupId>io.github.bonigarcia</groupId>
+		  <artifactId>webdrivermanager</artifactId>
+		  <version>5.0.3</version>
+	  </dependency>
   </dependencies>
 	<build>
 		<plugins>
